<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phong.android_studentprofilemanagement.SignupActivity"
    android:background="@color/teal_A_700"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_medium">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:id="@+id/tit_sign_up"
        android:text="@string/title_sign_up"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:id="@+id/edt_full_name"
        android:inputType="textPersonName"
        android:hint="@string/hint_full_name"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingStart="@dimen/padding_medium"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingStart="@dimen/padding_medium"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:id="@+id/edt_password"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingStart="@dimen/padding_medium"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/button_sign_up"
        android:textColor="@color/colorWhite"
        style="@style/TextAppearance.AppCompat.Button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/link_log_in"
        android:text="@string/link_log_in"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:visibility="gone"/>
</LinearLayout>
