<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phong.android_studentprofilemanagement.ResetPasswordActivity"
    android:background="@color/red_300"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:id="@+id/tit_reset_password"
        android:text="@string/title_reset_password"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:id="@+id/edt_email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingStart="@dimen/padding_medium"/>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/button_reset_password"
        android:textColor="@color/colorWhite"
        style="@style/TextAppearance.AppCompat.Button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/link_sign_up"
        android:text="@string/link_sign_up"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:visibility="gone"/>
</LinearLayout>
